Fixed Safari image overlap bug.

--- a/client/src/css/base.scss
+++ b/client/src/css/base.scss
@@ -207,7 +207,6 @@ select {
   flex-direction: column;
   align-items: center;
   width: 200px;
-  height: 200px;
   margin-bottom: calc(var(--vertical-element-gap) / 2);
   margin-top: calc(var(--vertical-element-gap) / 2);
 }
